# Change Log

All notable changes for the LINZ BDE Uploader are documented in this file.

## [1.2.0] - 2022-02-24
### Added
- Support for Ubuntu Focal/LTS
### Enhanced
- Quality improvements

## [1.1.1] - 2021-12-07
### Added
- Add github test workflow
### Fixed
- Unpredictable test (#27)
### Enhanced
- Add test for dollar characters in configuration (#29)

## [1.1.0] - 2019-08-08
### Added
- Add tests
- Custom "deb" and "check" Makefile targets
### Enhanced
- Generate version from git
### Fixed
- Do not try to convert Config ctor parameters to an hash (#13)
- Fix warnings on undefined values (value-less keywords) (#12)

## [1.0.0] - 2012-07-26
### Added
- Initial release.