@@ -2,6 +2,10 @@
 
 All notable changes for the LINZ BDE Uploader are documented in this file.
 
+## [X.Y.Z] - YYYY-MM-DD
+### Removed
+- Drop Ubuntu 18.04 support after [GitHub dropped their runner support](https://github.com/actions/runner-images/issues/6002).
+
 ## [1.2.0] - 2022-02-24
 ### Added
 - Support for Ubuntu Focal/LTS
